@@ -2,6 +2,8 @@ Koan CHANGELOG
 
 - Thu Jan 08 2008 Michael DeHaan <mdehaan@redhat.com> - 1.4.1
 - --embed-kickstart is no longer the default behavior
+- fix missing import in qcreate.py when using images over NFS
+- change to SELinux LVM behavior (it's ok if context is already set)
 
 - 1.4.0
 - Stable release of 1.3.3
